--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "shared/header" %>
+    <div class="container">
+      <div class="col-md-12">
+        <%= render "shared/flash" %>
+      </div>
+      <div class="row">
+        <%= yield %>
+      </div>
+    </div>
   </body>
 </html>
